--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,72 @@ footer{
     color: white;
 }
 .footer p{
-    font-size 15px;
+    font-size: 15px;
     color: white;
+}
+.main{
+    width: 70%;
+    margin: auto;
+}
+.threeCard{
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+}
+.threeCard .card{
+    width:300px;
+    height: 300px;
+    position: relative;
+    perspective: 1000px;
+    margin-left: 5%;
+}
+card:not(:first-child){
+    margin-left: 3%;
+}
+.front, .back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 1s;
+    backface-visibility: hidden;
+    border-radius: 15px;
+}
+.front{
+    background-color: green;
+}
+.front p{
+    width: 100%;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 1.4em;
+    margin-top: 40%;
+    line-height: 26px;
+    text-align: center;
+    color: white;
+}
+.back{
+    transform: rotateY(180deg);
+    background-color:rgb(102, 255, 102);
+    font-style: italic;
+    font-weight: bold;
+    font-size: 1.4em;
+    line-height: 26px;
+    text-align: center;
+    color: white;
+}Y
+.card:hover .front{
+    transform: rotateY(180deg);
+}
+.card:hover .back{
+    transform: rotateY(360deg);
 }
